fixtures/runtime/valid/exceptions/catch-finally.php
<?php
try {
    throw new Exception("boom");
} catch (Exception $e) {
    echo "catch|";
} finally {
    echo "finally\n";
}
