fixtures/runtime/invalid/exceptions/finally-throw.php
<?php
try {
    throw new Exception("boom");
} finally {
    echo "finally\n";
}
